--- a/lifecycle-data/products/dynamics-365-for-finance-and-operations-onpremises.yml
+++ b/lifecycle-data/products/dynamics-365-for-finance-and-operations-onpremises.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Dynamics 365 voor Finance en Operations (on-premises)
   description: Dynamics 365 for Finance and Operations (on-premises) volgt het moderne levenscyclusbeleid.
-  ms.date: 09/10/2020
-  keywords: Enterprise
-  ms.openlocfilehash: 65ad35266d5329153f851710586cf21edb5ebcbe
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
+  ms.date: 09/29/2020
+  keywords: 
+  ms.openlocfilehash: 9b879d2f0ced744707a538ea80b4eb7afc438518
+  ms.sourcegitcommit: 7ed59f943dacfc14fbd5d5593741177aa2b6431b
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "999016"
+  ms.lasthandoff: 09/29/2020
+  ms.locfileid: "1048301"
 name: Dynamics 365 voor Finance en Operations (on-premises)
 summary: >+
   Dynamics 365 for Finance and Operations (on-premises) volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
@@ -25,4 +25,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 06/15/2017
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/dynamics365/unified-operations/dev-itpro/migration-upgrade/on-prem-version-update-policy)\n* [Systeemvereisten](https://ax.help.dynamics.com/wiki/browser-requirements/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/dynamics365/unified-operations/dev-itpro/migration-upgrade/on-prem-version-update-policy)\n* [Verwijderde en afgeschafte functies](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/deprecated-features?toc=/dynamics365/finance/toc.json%22%20%5Cl%20%22us-payroll-tax-updates)\n* [Systeemvereisten](https://ax.help.dynamics.com/wiki/browser-requirements/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
