--- a/lifecycle-data/products/microsoft-office-2008-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2008-for-mac.yml
@@ -4,12 +4,12 @@ metadata:
   description: Microsoft Office 2008 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Business,Home and Student,Special Media Editon
-  ms.openlocfilehash: 708930d55e4c8d9df663189a495412a170cef7d8
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
+  ms.openlocfilehash: ba599ca4191c7e1a219f31d77797c9799adeca7c
+  ms.sourcegitcommit: c1ccf8aedb73c5410ef70b9d59a49b6f6746a52c
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "936739"
+  ms.lasthandoff: 10/20/2020
+  ms.locfileid: "1162402"
 name: Microsoft Office 2008 voor Mac
 summary: "Microsoft Office 2008 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Business, Thuisgebruik en Studenten, speciale media-editie\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
@@ -27,5 +27,5 @@ releases:
   endDate: 10/12/2010
 - version: Original Release
   startDate: 01/15/2008
-  endDate: 10/19/2009
+  endDate: 07/14/2009
 content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De begindatum voor de speciale media-editie van Office 2008 voor Mac is 12 maart 2008.\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Thuisgebruik en Studenten\n* Speciale media-editie"
