--- a/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
+++ b/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
@@ -4,31 +4,27 @@ metadata:
   description: Microsoft Business Solutions--Great Plains 8.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
-  ms.openlocfilehash: 536666c99ff11026e44547243dc841425050faaa
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "934667"
 name: Microsoft Business Solutions - Great Plains 8.0
-summary: >
+summary: |
   Microsoft Business Solutions - Great Plains 8.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Standard
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd op 13 oktober 2009
 products:
-- dynamics
+  - dynamics
 policyType: fixed-mainstream-only
 supportDates:
   start: 06/01/2004
   end: 10/13/2009
 releases:
-- version: Original Release
-  startDate: 06/01/2004
-  endDate: 10/13/2009
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
+  - version: Original Release
+    startDate: 06/01/2004
+    endDate: 10/13/2009
+content: |
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Standard
