--- a/lifecycle-data/products/microsoft-sql-server-2005.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2005.yml
@@ -3,45 +3,57 @@ metadata:
   title: Microsoft SQL Server 2005
   description: Microsoft SQL Server 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Compact,Developer,Embedded,Enterprise,Enterprise for Itanium-based Systems,Enterprise X64,Express,Express with Advanced Services,Standard,Standard for Itanium-based Systems,Standard X64,Workgroup
-  ms.openlocfilehash: ca451e6716bf5aed78c86dd83737d59a46a8203d
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "929746"
+  keywords: 'Compact,Developer,Embedded,Enterprise,Enterprise for Itanium-based Systems,Enterprise X64,Express,Express with Advanced Services,Standard,Standard for Itanium-based Systems,Standard X64,Workgroup'
 name: Microsoft SQL Server 2005
-summary: >
+summary: |
   Microsoft SQL Server 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Compact, Developer, Embedded, Enterprise, Enterprise voor Itanium-gebaseerde systemen, Enterprise X64, Express, Express met geavanceerde services, Standard, Standard voor Itanium-gebaseerde systemen, Standard X64, Workgroup
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
-- sql-server
+  - sql-server
 policyType: fixed
 supportDates:
   start: 01/14/2006
   end: 04/12/2011
   extendedEnd: 04/12/2016
 releases:
-- version: Service Pack 4
-  startDate: 12/13/2010
-  endDate: 04/12/2016
-- version: Service Pack 3
-  startDate: 12/15/2008
-  endDate: 01/10/2012
-- version: Service Pack 2
-  startDate: 02/19/2007
-  endDate: 01/12/2010
-- version: Service Pack 1
-  startDate: 04/18/2006
-  endDate: 04/08/2008
-- version: Original Release
-  startDate: 01/14/2006
-  endDate: 07/10/2007
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Microsoft SQL Server 2005 Compact Edition uitgebracht op 19 februari 2007.\n\n## <a name=\"editions\"></a>Edities \n* Compact\n* Developer\n* Embedded\n* Enterprise\n* Enterprise voor Itanium-gebaseerde systemen\n* Enterprise X64\n* Express\n* Express met geavanceerde services\n* Standard\n* Standard voor itanium-gebaseerde systemen\n* Standaard X64\n* Workgroup"
+  - version: Service Pack 4
+    startDate: 12/13/2010
+    endDate: 04/12/2016
+  - version: Service Pack 3
+    startDate: 12/15/2008
+    endDate: 01/10/2012
+  - version: Service Pack 2
+    startDate: 02/19/2007
+    endDate: 01/12/2010
+  - version: Service Pack 1
+    startDate: 04/18/2006
+    endDate: 04/08/2008
+  - version: Original Release
+    startDate: 01/14/2006
+    endDate: 07/10/2007
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](/sql/sql-server/end-of-support/sql-server-end-of-life-overview)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+  > [!NOTE]
+  > Microsoft SQL Server 2005 Compact Edition uitgebracht op 19 februari 2007.
+
+  ## <a name="editions"></a>Edities 
+  * Compact
+  * Developer
+  * Embedded
+  * Enterprise
+  * Enterprise voor Itanium-gebaseerde systemen
+  * Enterprise X64
+  * Express
+  * Express met geavanceerde services
+  * Standard
+  * Standard voor itanium-gebaseerde systemen
+  * Standaard X64
+  * Workgroup
