--- a/lifecycle-data/products/microsoft-system-center-mobile-device-manager-2008.yml
+++ b/lifecycle-data/products/microsoft-system-center-mobile-device-manager-2008.yml
@@ -3,32 +3,34 @@ metadata:
   title: Microsoft System Center Mobile Device Manager 2008
   description: Microsoft System Center Mobile Device Manager 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: All applicable,wSQL
-  ms.openlocfilehash: 88d4e4ed5265017faf066b03c192121e6319034c
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1001421"
+  keywords: 'All applicable,wSQL'
 name: Microsoft System Center Mobile Device Manager 2008
-summary: >+
+summary: |+
   Microsoft System Center Mobile Device Manager 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
-
-  Dit geldt voor de volgende edities: Alle toepasselijke, wSQL
+  Dit geldt voor de volgende edities: Allemaal van toepassing, wSQL
 
 products:
-- msc
+  - msc
 policyType: fixed
 supportDates:
   start: 05/14/2008
   end: 07/09/2013
   extendedEnd: 07/10/2018
 releases:
-- version: Service Pack 1
-  startDate: 12/15/2008
-  endDate: 07/10/2018
-- version: Original Release
-  startDate: 05/14/2008
-  endDate: 01/12/2010
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/mem/configmgr/core/migration/migrate-data-between-hierarchies?redirectedfrom=MSDN)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Alle toepasselijke\n* wSQL"
+  - version: Service Pack 1
+    startDate: 12/15/2008
+    endDate: 07/10/2018
+  - version: Original Release
+    startDate: 05/14/2008
+    endDate: 01/12/2010
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](/mem/configmgr/core/migration/migrate-data-between-hierarchies?redirectedfrom=MSDN)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+  ## <a name="editions"></a>Edities 
+  * Alles wat van toepassing is
+  * wSQL
