--- a/lifecycle-data/products/microsoft-system-center-virtual-machine-manager-2007.yml
+++ b/lifecycle-data/products/microsoft-system-center-virtual-machine-manager-2007.yml
@@ -3,30 +3,25 @@ metadata:
   title: Microsoft System Center Virtual Machine Manager 2007
   description: Microsoft System Center Virtual Machine Manager 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: f56ee87e6d98efe5304c881cf8adecfaa3e103d2
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812331"
 name: Microsoft System Center Virtual Machine Manager 2007
-summary: >
+summary: |
   Microsoft System Center Virtual Machine Manager 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
-- msc
+  - msc
 policyType: fixed
 supportDates:
   start: 11/29/2007
   end: 01/08/2013
   extendedEnd: 01/09/2018
 releases:
-- version: Original Release
-  startDate: 11/29/2007
-  endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/scvmm/2017/01/10/system-center-virtual-machine-manager-2007-version-nearing-end-of-support/)"
+  - version: Original Release
+    startDate: 11/29/2007
+    endDate: 01/09/2018
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/scvmm/2017/01/10/system-center-virtual-machine-manager-2007-version-nearing-end-of-support/)
