--- a/lifecycle-data/products/storsimple-data-manager.yml
+++ b/lifecycle-data/products/storsimple-data-manager.yml
@@ -3,25 +3,19 @@ metadata:
   title: StorSimple Datamanager
   description: StorSimple Data Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: cca889145816fcf7bde921df52a32be61a97a54d
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868744"
 name: StorSimple Datamanager
-summary: >+
+summary: |+
   StorSimple Data Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- azure
+  - azure
 policyType: fixed
 supportDates:
   start: 01/18/2018
   end: 07/01/2020
   extendedEnd: 12/31/2022
 releases:
-- version: Original Release
-  startDate: 01/18/2018
-content: ''
+  - version: Original Release
+    startDate: 01/18/2018
+content: |+
