--- a/lifecycle-data/products/windows-xp.yml
+++ b/lifecycle-data/products/windows-xp.yml
@@ -3,45 +3,50 @@ metadata:
   title: Windows XP
   description: Windows XP volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Home,Professional,Professional for Embedded Systems,Professional x64,Starter
-  ms.openlocfilehash: 170f3edab926203a3a5ff5573a613709588e974e
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "938774"
+  keywords: 'Home,Professional,Professional for Embedded Systems,Professional x64,Starter'
 name: Windows XP
-summary: >
+summary: |
   Windows XP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Home, Professional, Professional voor Embedded Systems, Professional x64, Starter
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 12/31/2001
   end: 04/14/2009
   extendedEnd: 04/08/2014
 releases:
-- version: Service Pack 3
-  startDate: 04/21/2008
-  endDate: 04/08/2014
-- version: Service Pack 2
-  startDate: 09/17/2004
-  endDate: 07/13/2010
-- version: Service Pack 1a
-  startDate: 02/03/2003
-  endDate: 10/10/2006
-- version: Service Pack 1
-  startDate: 08/30/2002
-  endDate: 10/10/2006
-- version: Original Release
-  startDate: 12/31/2001
-  endDate: 08/30/2005
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De startdatum voor Microsoft Windows XP Professional x64 Edition was 24 april 2005.\n\n## <a name=\"editions\"></a>Edities \n* Home\n* Professional\n* Professional for Embedded Systems\n* Professional x64\n* Starter"
+  - version: Service Pack 3
+    startDate: 04/21/2008
+    endDate: 04/08/2014
+  - version: Service Pack 2
+    startDate: 09/17/2004
+    endDate: 07/13/2010
+  - version: Service Pack 1a
+    startDate: 02/03/2003
+    endDate: 10/10/2006
+  - version: Service Pack 1
+    startDate: 08/30/2002
+    endDate: 10/10/2006
+  - version: Original Release
+    startDate: 12/31/2001
+    endDate: 08/30/2005
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+  > [!NOTE]
+  > De startdatum voor Microsoft Windows XP Professional x64 Edition was 24 april 2005.
+
+  ## <a name="editions"></a>Edities 
+  * Home
+  * Professional
+  * Professional for Embedded Systems
+  * Professional x64
+  * Starter
