--- a/lifecycle-data/products/windows-server-2022.yml
+++ b/lifecycle-data/products/windows-server-2022.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Windows Server 2022
   description: Windows Server 2022 volgt het vaste levenscyclusbeleid.
-  ms.date: 08/18/2021
+  ms.date: 08/31/2021
   keywords: 
-  ms.openlocfilehash: 32226dfdd93a7e21da11c1c6583ef0cd69687152
-  ms.sourcegitcommit: adfeeb1650d45b759b26479162bbe0ed43a82099
+  ms.openlocfilehash: 8c3cf914c65ac5fe4d13296398a4f0bea73eb7f8
+  ms.sourcegitcommit: acb9601132598295da5c9f5a537f1a1af401417a
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/19/2021
-  ms.locfileid: "3102582"
+  ms.lasthandoff: 09/01/2021
+  ms.locfileid: "3173031"
 name: Windows Server 2022
 summary: >+
   Windows Server 2022 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 08/18/2021
   endDate: 10/14/2031
-content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows](/lifecycle/faq/windows)\n* [Productgegevens](/windows-server/windows-server-2022/get-started/whats-new)\n\n\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Datacenter: Azure Edition\n* Standard"
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows](/lifecycle/faq/windows)\n* [Productgegevens](/windows-server/windows-server-2022/get-started/whats-new)\n\n\n> [!NOTE]\n> Containers die zijn uitgebracht met Windows Server 2022 volgen dezelfde levenscyclusdatums. \n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Datacenter: Azure Edition\n* Standard"
