--- a/lifecycle-data/products/storsimple-data-manager.yml
+++ b/lifecycle-data/products/storsimple-data-manager.yml
@@ -2,20 +2,35 @@
 metadata:
   title: StorSimple Datamanager
   description: StorSimple Data Manager volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
+  ms.date: 08/27/2021
+  keywords: 
+  ms.openlocfilehash: d10d78cc65128af453ec9198919283af9b95453c
+  ms.sourcegitcommit: b4f6d220b5256bde883db79fa5cd7bb1292ff87d
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 09/09/2021
+  ms.locfileid: "3255302"
 name: StorSimple Datamanager
-summary: |+
+summary: >+
   StorSimple Data Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
+
+
+
+  > [!IMPORTANT]
+
+  > StorSimple Data Manager wordt ondersteund als een onderdeel van de StorSimple 8000-serie.
+
 products:
-  - azure
+- azure
 policyType: fixed
 supportDates:
   start: 01/18/2018
   end: 07/01/2020
   extendedEnd: 12/31/2022
 releases:
-  - version: Original Release
-    startDate: 01/18/2018
-content: |+
+- version: Original Release
+  startDate: 01/18/2018
+  endDate: 12/31/2022
+content: ''
