--- a/lifecycle-data/products/windows-server-2008-r2.yml
+++ b/lifecycle-data/products/windows-server-2008-r2.yml
@@ -2,54 +2,40 @@
 metadata:
   title: Windows Server 2008 R2
   description: Windows Server 2008 R2 volgt het vaste levenscyclusbeleid.
-  ms.date: 04/23/2021
-  keywords: null
+  ms.date: 08/31/2021
+  keywords: 
+  ms.openlocfilehash: 0457a4bed39d146651578578c7e76dbb60d45ac3
+  ms.sourcegitcommit: b7b46fb942fa16a0d96d486f6b591e470c048157
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 09/21/2021
+  ms.locfileid: "3460562"
 name: Windows Server 2008 R2
-summary: |
-  Windows Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
-  Dit is van toepassing op de volgende edities: Datacenter, Enterprise, HPC Edition, op Itanium-gebaseerde systemen, Standard, Web
-
-  > [!IMPORTANT]
-  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. 
+summary: "Windows Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\nDit is van toepassing op de volgende edities: Datacenter, Enterprise, HPC Edition, op Itanium-gebaseerde systemen, Standard, Web\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n\n"
 products:
-  - windows
+- windows
 policyType: fixed
 supportDates:
   start: 10/22/2009
   end: 01/13/2015
   extendedEnd: 01/14/2020
 releases:
-  - version: Extended Security Update Year 3
-    startDate: 01/11/2022
-    endDate: 01/10/2023
-  - version: Extended Security Update Year 2
-    startDate: 01/12/2021
-    endDate: 01/11/2022
-  - version: Extended Security Update Year 1
-    startDate: 01/14/2020
-    endDate: 01/12/2021
-  - version: Service Pack 1
-    startDate: 02/22/2011
-    endDate: 01/14/2020
-  - version: Original Release
-    startDate: 10/22/2009
-    endDate: 04/09/2013
-content: |
-  > [!TIP]
-  > *Voor de Datacenter-, Standaard-, Enterprise- en Embedded-edities van dit product zijn extra beveiligingsupdates (ESU) beschikbaar via specifieke volumelicentieprogramma's, en dit voor maximaal drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. 
-
-  ## <a name="links"></a>Koppelingen 
-  * [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)
-  * [Serverupgradegegevens](/windows-server/upgrade/upgrade-overview)
-  * [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)
-  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
-
-
-  ## <a name="editions"></a>Edities 
-  * Datacenter
-  * Enterprise
-  * HPC Edition
-  * Op Itanium-gebaseerde systemen
-  * Standard
-  * Web
+- version: Extended Security Update Year 4 (Azure only)
+  startDate: 01/11/2023
+  endDate: 01/09/2024
+- version: Extended Security Update Year 3
+  startDate: 01/12/2022
+  endDate: 01/10/2023
+- version: Extended Security Update Year 2
+  startDate: 01/13/2021
+  endDate: 01/11/2022
+- version: Extended Security Update Year 1
+  startDate: 01/14/2020
+  endDate: 01/12/2021
+- version: Service Pack 1
+  startDate: 02/22/2011
+  endDate: 01/14/2020
+- version: Original Release
+  startDate: 10/22/2009
+  endDate: 04/09/2013
+content: "> [!TIP]\n> *Voor de Datacenter-, Standaard-, Enterprise- en Embedded-edities van dit product zijn extra beveiligingsupdates (ESU) beschikbaar via specifieke volumelicentieprogramma's, en dit voor maximaal drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. \n\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Serverupgradegegevens](/windows-server/upgrade/upgrade-overview)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Enterprise\n* HPC Edition\n* Op Itanium-gebaseerde systemen\n* Standard\n* Web"
